clusters/lotr/default/TrueNAS/app/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.0.13
