clusters/lotr/default/TrueNAS/app/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.pixelstack.live`)
      kind: Rule
      services:
        - name: truenas
          port: 443
      middlewares:
        - name: secured
